
[tool.poetry]
name = "fastapi-application"
version = "0.1.0"
packages = [
    { include = "fastapi-application" }  # Указываем пакет для импорта
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
pydentic = {extras = ["settings"], version = "^0.0.1.dev3"}
pydantic-settings = "^2.10.1"
